update: add trader strategy
