# pkg/model/trader.go
@@ -8,10 +8,10 @@ import (
 
 // Item is the model of goods, like PTCG cards
 type Item struct {
-	ID        int64     `json:"id" gorm:"column:id"`
-	Name      string    `json:"name" gorm:"column:name"`
-	ImageURL  string    `json:"image_url" gorm:"column:image_url"`
-	CreatorID int64     `json:"creator_id" gorm:"column:creator_id"`
+	ID        int64     `json:"id" gorm:"column:id" example:"1"`
+	Name      string    `json:"name" gorm:"column:name" example:"Pikachu"`
+	ImageURL  string    `json:"image_url" gorm:"column:image_url" example:"https://imgur.com/NTSEJxX"`
+	CreatorID int64     `json:"creator_id" gorm:"column:creator_id" example:"1"`
 	UpdatedAt time.Time `json:"updated_at" gorm:"column:updated_at"`
 	CreatedAt time.Time `json:"created_at" gorm:"column:created_at"`
 }
@@ -28,14 +28,14 @@ type ItemQuery struct {
 
 // Order is the model of user order
 type Order struct {
-	ID        int64           `json:"id"  gorm:"column:id"`
-	ItemID    int64           `json:"item_id"  gorm:"column:item_id"`
-	CreatorID int64           `json:"creator_id"  gorm:"column:creator_id"`
-	OrderType OrderType       `json:"order_type"  gorm:"column:order_type"`
-	Price     decimal.Decimal `json:"price"  gorm:"column:price"`
-	Status    OrderStatus     `json:"status"  gorm:"column:status"`
-	UpdatedAt time.Time       `json:"updated_at"  gorm:"column:updated_at"`
-	CreatedAt time.Time       `json:"created_at"  gorm:"column:created_at"`
+	ID        int64           `json:"id" gorm:"column:id" example:"1"`
+	ItemID    int64           `json:"item_id" gorm:"column:item_id" example:"1"`
+	CreatorID int64           `json:"creator_id" gorm:"column:creator_id" example:"1"`
+	OrderType OrderType       `json:"order_type" gorm:"column:order_type" example:"2"`
+	Price     decimal.Decimal `json:"price" gorm:"column:price"`
+	Status    OrderStatus     `json:"status" gorm:"column:status"`
+	UpdatedAt time.Time       `json:"updated_at" gorm:"column:updated_at"`
+	CreatedAt time.Time       `json:"created_at" gorm:"column:created_at"`
 }
 
 // OrderQuery ...
@@ -58,17 +58,19 @@ func (*OrderUpdates) TableName() string {
 
 // Transaction is the result of orders matching
 type Transaction struct {
-	ID          int64           `json:"id"  gorm:"column:id"`
-	MakeOrderID int64           `json:"make_order_id"  gorm:"column:make_order_id"`
-	TakeOrderID int64           `json:"take_order_id"  gorm:"column:take_order_id"`
-	FinalPrice  decimal.Decimal `json:"final_price"  gorm:"column:final_price"`
-	UpdatedAt   time.Time       `json:"updated_at"  gorm:"column:updated_at"`
-	CreatedAt   time.Time       `json:"created_at"  gorm:"column:created_at"`
+	ID          int64           `json:"id" gorm:"column:id" example:"1"`
+	ItemID      int64           `json:"item_id" gorm:"column:item_id" example:"1"`
+	MakeOrderID int64           `json:"make_order_id" gorm:"column:make_order_id" example:"1"`
+	TakeOrderID int64           `json:"take_order_id" gorm:"column:take_order_id" example:"2"`
+	FinalPrice  decimal.Decimal `json:"final_price" gorm:"column:final_price"`
+	UpdatedAt   time.Time       `json:"updated_at" gorm:"column:updated_at"`
+	CreatedAt   time.Time       `json:"created_at" gorm:"column:created_at"`
 }
 
 // TransactionQuery ...
 type TransactionQuery struct {
-	ID *int64 `json:"id" gorm:"column:id"`
+	ID     *int64 `json:"id" gorm:"column:id"`
+	ItemID *int64 `json:"item_id" gorm:"column:item_id"`
 
 	PerPage int `json:"per_page" gorm:"-"`
 	Page    int `json:"page" gorm:"-"`
